--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -86,7 +86,13 @@ No approximation is made since at NLO there is no interference between radiation
 {\bf Update:} We updated the text accordingly.
 
 \item On page 11, ``The fractional cross section distributions for the Higgs boson production processes are shown in the top panel of Fig. 10 as a function of $\Delta y_{jj}$ using the two leading jets (i.e. the ones with largest pT) for the three different Higgs boson pT cuts." I believe it should be $\Delta y_{jj}^{\text{min}}$ according to what is shown on the plot. This should also be made clearer in the text.
+
+{\bf Update:} It is indeed $\Delta y_{jj}^{\text{min}}$. The text has been corrected, and also a definition of the fractional cross section is provided.
+
 \item Several times, the authors use the word ``original" to describe a jet without defining it explicitely. From the context, one somehow understands that this is a ``Born" jet but such a definition is highly ambiguous in particular at higher order. More information should be provided.
+
+{\bf Update:} The sentence has been reformulated, so that it is more clear that  the original jets corresponds the two final state partons in the Born level configuration. One can imagine to build a mapping from the real to the Born configuration which preserve the t-channel propagators. Since there is only a unique way to do so, the definition of ``Born/original'' jets is unambiguous.
+
 \end{enumerate}
 \section*{Section IV}
 \begin{enumerate}
@@ -117,6 +123,10 @@ No approximation is made since at NLO there is no interference between radiation
 {\bf Update:} The comment is correct. Only the inclusive Higgs production in VBF channel has been calculated with N3LO (QCD) accuracy within struture function approach. Background process such as Higgs+2jets production from ggF channel is only available at NLO. We correct the text accordingly. 
 
 \item ``In this manuscript we have presented a detailed comparison of the two types of calculations, i.e. NLOPS and NNLO [..]." I think this is also not correct. To my view, Section V does not qualify (yet?) for a ``detailed" study.
+
+{\bf Update:} We remove the word detailed.
+
+
 \item ``This paper follows a study with a similar spirit carried out with dijet, Z-boson + jet and Higgs boson + jet production at the LHC." Please provide the references.
 
 {\bf Update:} The reference is now added.
