Update reply.tex to address the changes in introduction and section V bullet 8

--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -47,6 +47,9 @@ In the following we address each individual point raised by the referee. We hope
 \section*{Section I}
 \begin{enumerate}
 \item While not completely overlapping with the present study, some interesting references are missing. For example, arXiv: 1802.09955 and 1805.04446 are complimentary to it and should be cited. In general, I would encourage the authors to present a more detailed review of the theoretical status of VBF at the LHC in the introduction.
+
+{\bf Update:} We rewrite the introduction with more emphasis on the previous studies on VBF, VH and ggF production channels for Higgs-plus-two-jet final states. The two suggested references are also added.
+
 \end{enumerate}
 \section*{Section II}
 \begin{enumerate}
@@ -115,6 +118,8 @@ No approximation is made since at NLO there is no interference between radiation
 \item From this study and given that the predictions do not agree very well in some phase-space regions, what are the implications for experimental analysis? Should the experimental measurements should stay away from these regions? Or are these differences negligible given the experimental precision even at high-luminosity LHC?
 \item The definition of $d_{23}$ and $d_{34}$ is not given anywhere. This should be corrected.
 \item The “Matching \& PS scheme variation” band seems to increase for more exclusive cuts (for example on Fig. 22). Is it true? If yes, the author should comment on it.
+
+{\bf Update:} It is correct. We add explanations in the text when analysising Fig. 22.
 \end{enumerate}
 \section*{Section VI}
 \begin{enumerate}
