Update reply.tex to address comment on section III bullet 2

--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -74,6 +74,9 @@ No approximation is made since at NLO there is no interference between radiation
 {\bf Update:} The reweighting procedure is now specified in Sec. II with notations to distinguish labels of "SM", "HEFT" and "approx SM". {\bf Still need to make clear the ggF lable in Table.1 and Fig.3.}
 
 \item A particular emphasis is put on the distinctions between VBF production with respect to VH. Such a distinction is actually unphysical as both production mechanism are actually undistinguishable (as they interfere) and posses the same physics content. The authors should explain why they want to treat VH as a background as, a priori, no distinction is required.
+
+{\bf Update:} It is indeed not clear what do we mean by VBF or VH production, given that VH production with V decay hadronically shares the same final states with VBF production. We add more explanations now in the introduction along with the text describing Fig. 1.
+
 \item In the footnote of page 2, it is indicated that ttH is not relevant for this study. On the other hand, it is shown on Fig.2 which is a bit contradictory. In particular, the implementation of cuts for ttH is not clear. From the caption, it is says “all hadronic”, probably meaning a 4j+2j\_b final state. In this case, how is implemented the event selection for this process? Are the bottom jets counted as jets? Also, more information on how this process is computed (given it is presented) should be given in the text (and not only in the caption).
 
 {\bf Update:} The ttH process has been included in Fig. 2 for illustration of its impact. However, it is not considered in the rest of the paper. We updated footnote 2 and clarified this. Regarding the implementation of ttH for Fig. 2 we incorporated this information in the main text: for the fiducial selection shown in Fig. 2 (right) indeed the 4j+2j\_b final state has been considered treating bottom jets as jets.
