--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -79,9 +79,7 @@ No approximation is made since at NLO there is no interference between radiation
 
 \item In the footnote of page 2, it is indicated that ttH is not relevant for this study. On the other hand, it is shown on Fig.2 which is a bit contradictory. In particular, the implementation of cuts for ttH is not clear. From the caption, it is says “all hadronic”, probably meaning a 4j+2j\_b final state. In this case, how is implemented the event selection for this process? Are the bottom jets counted as jets? Also, more information on how this process is computed (given it is presented) should be given in the text (and not only in the caption).
 
-{\bf Update:} The ttH process has been included in Fig. 2 for illustration of its impact. However, it is not considered in the rest of the paper. We updated footnote 2 and clarified this. Regarding the implementation of ttH for Fig. 2 we incorporated this information in the main text: for the fiducial selection shown in Fig. 2 (right) indeed the 4j+2j\_b final state has been considered treating bottom jets as jets.
-
-{\bf Update:} JH: I modified the wording of the footnote somewhat and added references for the ATLAS and CMS discovery papers for ttH. 
+{\bf Update:} The ttH process has been included in Fig. 2 for illustration of its impact. However, it is not considered in the rest of the paper. We updated footnote 2 and clarified this. Regarding the implementation of ttH for Fig. 2 we incorporated this information in the main text: for the fiducial selection shown in Fig. 2 (right) indeed the 4j+2j\_b final state has been considered treating bottom jets as jets. References were added for the ATLAS and CMS discovery papers for ttH.
 
 \item How the EW corrections are implemented for each process is unclear. Some references are given in the caption of Fig.2 but it would be more useful to have more details in the text instead.
 
@@ -97,12 +95,12 @@ No approximation is made since at NLO there is no interference between radiation
 
 \item Several times, the authors use the word ``original" to describe a jet without defining it explicitely. From the context, one somehow understands that this is a ``Born" jet but such a definition is highly ambiguous in particular at higher order. More information should be provided.
 
-{\bf Update:} The sentence has been reformulated, so that it is more clear that  the original jets corresponds the two final state partons in the Born level configuration. One can imagine to build a mapping from the real to the Born configuration which preserve the t-channel propagators. Since there is only a unique way to do so, the definition of ``Born/original'' jets is unambiguous.
+{\bf Update:} The sentence has been reformulated, so that it is more clear that  the original jets correspond to the two final state partons in the Born level configuration. One can imagine to build a mapping from the real to the Born configuration which preserve the t-channel propagators. Since there is only a unique way to do so, the definition of ``Born/original'' jets is unambiguous.
 
 \end{enumerate}
 \section*{Section IV}
 \begin{enumerate}
-\item This section focus on the study of jet-radius. To my knowledge, such a study has been performed for the first time in arXiv: 1703.05676 (which is not cited). The authors should include this reference and explain how their study goes beyond the known results.
+\item This section focuses on the study of jet-radius. To my knowledge, such a study has been performed for the first time in arXiv: 1703.05676 (which is not cited). The authors should include this reference and explain how their study goes beyond the known results.
 
 {\bf Update:} Indeed the first study of jet cone size effect was in 1703.05676. We add the reference now in the beginning of Section IV and explain the new contribution from our current study.
 
