Update reply.tex with Stefan's input mainly for section V

--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -112,15 +112,37 @@ No approximation is made since at NLO there is no interference between radiation
 \section*{Section V}
 \begin{enumerate}
 \item A table with the cross section should be added as it present more information (and therefore help reproducibility of the work presented). This information should be available to the authors without extra runs.
+
+  {\bf Update:} This table has been added.
+  
 \item In arXiv: 1803.07943, a comparison of theoretical predictions for VBS is also performed. Given the similarities between VBF and VBS, it would be interesting to qualitatively compare the present findings with the ones presented there. In particular, it seems that the agreement between fixed-order predictions and parton-shower ones is better in VBF than in VBS. Also, the spread of NLO+PS predictions seems to be larger for VBS than for VBF. The authors should comment on this.
+
+  {\bf Update:} We have commented on this in the main text. We note that the Pythia 8 implementation used in arXiv:1803.07943 suffers from the problem of an unphysical recoil scheme, as described in detail in arXiv:2106.10987. This is likely the cause of the large differences observed between the Herwig and Pythia matched predictions in arXiv:1803.07943.
+
 \item On the plots, the ``Matching \& PS scheme variation" band should also be provided on the inset showing the ratio to NNLO (for example in Fig. 21, it is not visible in the absolute plots).
+
+  {\bf Update:} The requested uncertainty bands have been added to the plots.
+  
 \item In addition, the 7-scale variation should also be added on the same inset (probably for the NNLO predictions). It would put the differences observed in perspective.
+
+  {\bf Update:} See above, the bands have been added.
+
 \item One can see noticeable differences between the various NLO+PS predictions in essentially all the observables. The authors should comments on this and explain how these differences could be explained (if possible).
+
+  {\bf Update:} This has been commented on in the text.
+
 \item From this study and given that the predictions do not agree very well in some phase-space regions, what are the implications for experimental analysis? Should the experimental measurements should stay away from these regions? Or are these differences negligible given the experimental precision even at high-luminosity LHC?
+
+  {\bf Update:} This has been commented on in the main text.
+
 \item The definition of $d_{23}$ and $d_{34}$ is not given anywhere. This should be corrected.
+
+  {\bf Update:} This is now corrected.
+
 \item The “Matching \& PS scheme variation” band seems to increase for more exclusive cuts (for example on Fig. 22). Is it true? If yes, the author should comment on it.
 
 {\bf Update:} It is correct. We add explanations in the text when analysising Fig. 22.
+
 \end{enumerate}
 \section*{Section VI}
 \begin{enumerate}
