--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -71,7 +71,7 @@ No approximation is made since at NLO there is no interference between radiation
 \begin{enumerate}
 \item ``The gluon-gluon fusion contributions are shown in both the Higgs effective theory (HEFT) and approximate Standard Model, using the reweighting technique described in Sec. II A. " Sec. II A. is not really illuminating on what is actually done there. This should be defined a bit more precisely and in particular how the two predictions differ. Also, why are both computations for ggF not provided in Table 1 (as on Fig.3) for example? Note that the labelling is not consistent between the plots and the table.
 
-{\bf Update:} The reweighting procedure is now specified in Sec. II with notations to distinguish labels of "SM", "HEFT" and "approx SM". {\bf Still need to make clear the ggF lable in Table.1 and Fig.3.}
+{\bf Update:} The reweighting procedure is now specified in Sec. II with notations to distinguish labels of "HEFT" and "approx SM". The label of "SM" is remvoed in table 1 and all figures. 
 
 \item A particular emphasis is put on the distinctions between VBF production with respect to VH. Such a distinction is actually unphysical as both production mechanism are actually undistinguishable (as they interfere) and posses the same physics content. The authors should explain why they want to treat VH as a background as, a priori, no distinction is required.
 
