--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -67,7 +67,7 @@ No approximation is made since at NLO there is no interference between radiation
 \end{enumerate}
 
 \section*{Section III}
-{\bf Update:} I divided Section III into several sections so that it doesn't appear too monolithic. I think it's better. 
+{\bf Update:}  Section III was divided into several sections so that it doesn't appear too monolithic, as per the referee's suggestion. 
 \begin{enumerate}
 \item ``The gluon-gluon fusion contributions are shown in both the Higgs effective theory (HEFT) and approximate Standard Model, using the reweighting technique described in Sec. II A. " Sec. II A. is not really illuminating on what is actually done there. This should be defined a bit more precisely and in particular how the two predictions differ. Also, why are both computations for ggF not provided in Table 1 (as on Fig.3) for example? Note that the labelling is not consistent between the plots and the table.
 
