added comment on sec 3

--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -34,7 +34,18 @@
 \maketitle
 
 We would like to thank the referee for his/her detailed reading of the manuscript and constructive criticism. Incorporating the raised points helped to significantly improve the quality of the paper.
-In the following we address each individual point raised by the referee. We hope the paper can now be accepted for publication.
+In the following we address each individual point raised by the referee.
+%%
+In the new version of the manuscript we splitted Sec. 3, ``Characteristics of gluon-gluon fusion,  VBF and VH production" into more sections:
+\begin{enumerate}
+  \setcounter{enumi}{2}
+\item General characteristics of gluon-gluon fusion,  VBF and VH production
+\item Transverse momentum distributions and their evolution with Higgs boson $p_T$
+\item Dijet mass, $\Delta y_{jj}$ and further VBF discrimination
+\item Further event topology cuts
+\end{enumerate}
+%%
+ We hope the paper can now be accepted for publication.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Everywhere}
